# steam-hardware-survey

./: .gitignore  Makefile  pyproject.toml  requirements.txt
src/: main.py  plotting.py  scrapper.py
src/config/: base.py
steam-hardware-survey/: main.py  plotting.py
